--- a/00-Update.Rmd
+++ b/00-Update.Rmd
@@ -23,13 +23,18 @@ htmltools::tagList(rmarkdown::html_dependency_font_awesome())
 ```
 
 
-## Update `R`
+## Update `R` {.tabset}
 <hr>
 
-Windows users can update R with the `installR` package and Mac users can use the `updateR` package. Linux users can go to the [R Archive](https://cran.r-project.org/) and follow the download links for their operating system.
+![](images/r_logo.png){width="170" style="float: left; margin-top: -6px; margin-right: 30px;"}
 
+<br><br>
 
-### On Windows {-}
+Windows users can update R with the `installR` package, and Mac users can use the `updateR` package. Linux users can go to the [R Archive](https://cran.r-project.org/) and follow the download links for their operating system.
+
+<br>
+
+### On Windows 
 
 1. Run:  `install.packages("installr")`
 1. Run:  `installr::updateR()` to check for updates
@@ -48,7 +53,7 @@ Windows users can update R with the `installR` package and Mac users can use the
 1. Close and restart R
  
 
-### On Mac/Apple {-}
+### On Mac/Apple
 
 ```{r, eval=F}
 # Get the devtools package
@@ -65,8 +70,11 @@ updateR::updateR(admin_password = "Admin user password")
 ## Update `RStudio`
 <hr>
 
+![](images/rstudio-hex.png){style="float: right; margin-top: -12px; margin-left:24px;"}
+
 You can check for __RStudio__ updates from the `Help` menu in RStudio's top navigation bar.
 
+<br>
 
 __Instructions__  
 
